ignore latexmk files

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ cvl_bachelor_thesis.fdb_latexmk
 cvl_bachelor_thesis.synctex.gz
 cvl_bachelor_thesis.synctex.gz(busy)
 cvl_bachelor_thesis.pdf
+s1_introduction.fdb_latexmk
