--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ cvl_bachelor_thesis.synctex.gz
 cvl_bachelor_thesis.synctex.gz(busy)
 cvl_bachelor_thesis.pdf
 s1_introduction.fdb_latexmk
+cvl_bachelor_thesis.toc
